name:                hglcv
version:             0.1.0.0
synopsis:            Simple OpenGL canvas/event handling library
description:         Please see README.md
homepage:            http://github.com/jacereda/hglcv#readme
license:             BSD3
license-file:        LICENSE
author:              Jorge Acereda
maintainer:          jacereda@gmail.com
copyright:           Copyright: (c) 2016 Jorge Acereda
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  if os(Darwin)
    c-sources: cbits/glcv/src/cocoaarc.m
    ld-options: -framework OpenGL -framework AppKit
  else
    if os(Windows)
      c-sources: cbits/glcv/src/win.c
      extra-libraries: opengl32
    else
      if os(Android)
        c-sources: cbits/glcv/src/android.c 
      else
        if os(IOS)
          c-sources: cbits/glcv/src/ios.m
        else
          c-sources: cbits/glcv/src/xlib.c
  cc-options: -DCV_NO_MAIN -DCV_EXPLICIT_ENTRY
  exposed-modules:     GLCV
                     , GLCV.Key
                     , GLCV.Event
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hglcv-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hglcv
  default-language:    Haskell2010

test-suite hglcv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hglcv
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jacereda/hglcv
